k8s/message-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
  labels:
    app: message-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: message-service
          image: message-service:latest
          imagePullPolicy: Never
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ "ALL" ]
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: message-service
spec:
  selector:
    app: message-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
