k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /messages
            pathType: Prefix
            backend:
              service:
                name: message-service
                port:
                  number: 8081

          - path: /login
            pathType: Prefix
            backend:
              service:
                name: bot-service
                port:
                  number: 8089
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: bot-service
                port:
                  number: 8089
          - path: /default-ui.css
            pathType: Exact
            backend:
              service:
                name: bot-service
                port:
                  number: 8089
